--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menuBar-wrapper {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  background-color: #1e90ff;
+  color: #fff;
+  padding: 14px 20px;
+  margin: 10px 20px;
+  border: none;
+  border-radius: 5px;
+}
+
+input[type="file"]::file-selector-button {
+  padding: 14px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #f4a460;
+  color: #fff;
+  transition: 1s;
+  position: relative;
+}
+
+label {
+  padding: 11px 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #f4a460;
+  color: #fff;
+  position: absolute;
+  z-index: 99;
+  margin: 0 150px 0 0;
+  transition: 1s;
+}
+
+input[type="file"]::file-selector-button:hover,
+label:hover {
+  background-color: cornflowerblue;
+}
+
+.upload-Img-Btn-wrapper {
+  width: auto;
+  display: flex;
+  justify-content: center;
+  margin: 30px 0 50px 0px;
+}
+
+.img-wrapper-main {
+  height: 50vh;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+#uploadImage img {
+  width: 500px;
+  height: 500px;
+  max-width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#uploadImage {
+  margin-right: 100px;
 }
+
+.love {
+  -webkit-mask-image: url("./assets/shape/user_image_frame_1.png");
+  mask-image: url("./assets/shape/user_image_frame_1.png");
+}
+
+.square {
+  -webkit-mask-image: url("./assets/shape/user_image_frame_2.png");
+  mask-image: url("./assets/shape/user_image_frame_2.png");
+}
+.circle {
+  -webkit-mask-image: url("./assets/shape/user_image_frame_3.png");
+  mask-image: url("./assets/shape/user_image_frame_3.png");
+}
+
+.rectangle {
+  -webkit-mask-image: url("./assets/shape/user_image_frame_4.png");
+  mask-image: url("./assets/shape/user_image_frame_4.png");
+}
+
+/* Frame style 
+.frame-inner {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.frame-inner .span-text {
+  display: flex;
+  text-align: center;
+  height: 90px;
+  align-items: center;
+  border: 1px solid gainsboro;
+  padding: 0 10px;
+  margin: 0 5px 0 0;
+}
+.frame-inner span {
+  font-weight: 500;
+}
+.frame-inner img {
+  height: 90px;
+  max-width: 100%;
+} */
